--- a/index.html
+++ b/index.html
@@ -373,7 +373,178 @@
           / The final cost depends on the technical requirements, terms,
           specifics of your project.
         </p>
+
+        <form action="" class="calculator-form">
+          <div class="calculator-form-input">
+            <label
+              for="calculator-form-webcite-type"
+              class="calculator-form-title"
+            >
+              What should be done:</label
+            >
+            <select
+              name="webcite-type"
+              id="calculator-form-webcite-type"
+              class="calculator-form-select"
+            >
+              <option value="landing-page">Landing page</option>
+              <option value="website">Website</option>
+              <option value="cms">CMS</option>
+              <option value="portal" selected>Portal</option>
+              <option value="e-shop">E-shop</option>
+            </select>
+          </div>
+          <div class="calculator-form-input">
+            <label
+              for="calculator-form-technologies"
+              class="calculator-form-title"
+              >Choose preferred technologies</label
+            >
+            <select
+              name="technologies"
+              id="calculator-form-technologies"
+              class="calculator-form-select"
+            >
+              <option value="html section">HTML</option>
+              <option value="css">CSS</option>
+              <option value="js">JS</option>
+              <option value="react">React</option>
+              <option value="angular">Angular</option>
+              <option value="php">PHP</option>
+            </select>
+          </div>
+          <div class="calculator-form-input">
+            <label for="" class="calculator-form-title"
+              >Personal account and shopping cart:</label
+            >
+            <div class="calculator-form-radio-container">
+              <input
+                type="radio"
+                id="calculator-form-input-cart-yes"
+                name="cart"
+                value="yes"
+                class="calculator-form-input-field"
+              />
+              <label
+                for="calculator-form-input-cart-yes"
+                class="calculator-form-input-lable"
+                >Yes</label
+              >
+              <input
+                type="radio"
+                id="calculator-form-input-cart-no"
+                name="cart"
+                value="no"
+                class="calculator-form-input-field"
+              />
+              <label
+                for="calculator-form-input-cart-no"
+                class="calculator-form-input-lable"
+                >No</label
+              >
+            </div>
+          </div>
+          <div class="calculator-form-input">
+            <label for="" class="calculator-form-title"
+              >Requests reception on your email:</label
+            >
+            <div class="calculator-form-radio-container">
+              <input
+                type="radio"
+                id="calculator-form-input-reseption-yes"
+                name="cart-name"
+                value="yes"
+                class="calculator-form-input-field"
+              />
+              <label
+                for="calculator-form-input-cart-yes"
+                class="calculator-form-input-lable"
+                >Yes</label
+              >
+              <input
+                type="radio"
+                id="calculator-form-input-reseption-no"
+                name="cart-name"
+                value="no"
+                class="calculator-form-input-field"
+              />
+
+              <label
+                for="calculator-form-input-reseption-no"
+                class="calculator-form-input-lable"
+                >No</label
+              >
+            </div>
+          </div>
+          <div class="calculator-form-input">
+            <p class="calculator-form-total">Cost:</p>
+            <p class="calculator-form-title-cost">350$</p>
+          </div>
+          <input
+            type="submit"
+            value="Find out the cost  —"
+            class="accent-btn"
+          />
+        </form>
       </div>
+      <!-- FOOTER -->
+      <footer class="footer">
+        <div class="container">
+          <h2 class="fron-page-my-name-footer">Bulakh Igor</h2>
+
+          <p class="fron-page-description-footer">Frontend Developer</p>
+
+          <a href="tel+:380979540954" class="footer-my-tel"
+            >+38 (097) 954 0 954</a
+          >
+
+          <a href="mailto:bulach.igor@gmail.com" class="footer-my-mail"
+            >bulach.igor@gmail.com</a
+          >
+
+          <div class="foter-icons">
+            <a href="https://github.com/IgorBulakh" class="social-link"
+              ><i class="fab fa-github-square"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/igor-bulakh-8b155b173/"
+              class="social-link"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+            <a href="https://www.facebook.com/igor.bulah.5/" class="social-link"
+              ><i class="fab fa-facebook-square"></i
+            ></a>
+            <a
+              href="https://www.instagram.com/bulakh.igor/?hl=uk "
+              class="social-link"
+              ><i class="fab fa-instagram"></i
+            ></a>
+
+            <!-- <ul class="futer-icons-link">
+              <li class="futer-icons-list">
+                <a href="https://github.com/IgorBulakh"
+                  ><i class="fab fa-github-square"></i
+                ></a>
+              </li>
+              <li class="futer-icons-list">
+                <a href="https://www.linkedin.com/in/igor-bulakh-8b155b173/"
+                  ><i class="fab fa-linkedin"></i
+                ></a>
+              </li>
+              <li class="futer-icons-list">
+                <a href="https://www.facebook.com/igor.bulah.5/"
+                  ><i class="fab fa-facebook-square"></i
+                ></a>
+              </li>
+              <li class="futer-icons-list">
+                <a href="https://www.instagram.com/bulakh.igor/?hl=uk"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+              </li>
+            </ul> -->
+          </div>
+        </div>
+      </footer>
     </section>
   </body>
 </html>
